--- a/Real_Estate_Price_Prediction.ipynb
+++ b/Real_Estate_Price_Prediction.ipynb
@@ -36,7 +36,7 @@
     "2. **User-Friendly Interface:** Provide a simple and intuitive way for users to input property details and get price estimates.\n",
     "3. **Insightful Analysis:** Offer insights into the real estate market trends in Bangalore through data visualization and analysis.\n",
     "\n",
-    "This project was developed with the help of the `banglore_home_prices_final.ipynb` notebook from the [codebasics repository](https://github.com/codebasics/py/blob/master/DataScience/BangloreHomePrices/model/banglore_home_prices_final.ipynb), which provided the foundational steps for data preprocessing, model training, and evaluation.\n",
+    "This project was developed with the help of the `Real_Estate_Price_Prediction.ipynb` notebook  which provided the foundational steps for data preprocessing, model training, and evaluation.\n",
     "                                                                                                                                                                                                                                                                            \n",
     "## Dataset\n",
     "The dataset used for training and testing the model contains information about various properties in Bangalore, including:\n",
